Update agenda for week of October 26, 2025

--- a/index.html
+++ b/index.html
@@ -11,13 +11,13 @@
         <header>
             <h1>Madison YSA</h1>
             <h2>Sacrament Meeting Agenda</h2>
-            <p class="date">Week of October 22, 2025</p>
+            <p class="date">Week of October 26, 2025</p>
         </header>
 
         <main>
         <section class="inspiration">
             <div class="inspiration-image">
-                <div class="placeholder-image"></div>
+                <img src="C:\Users\ammartin36.ENGR\OneDrive - UW-Madison\Documents\Currently_Working_On\calling\Madison-YSA-Agenda\calling_the_fishermen.jpeg" alt="Inspirational image">
             </div>
             <div class="inspiration-quote">
                 <blockquote>
@@ -32,14 +32,35 @@
                 
             <div class="agenda-item">
                 <div class="details">
-                    <strong>Opening Hymn</strong>
-                    <p>Hymn #2 - "The Spirit of God"</p>
+                    <strong>Conducting</strong>
+                    <p>Bishop Clinton</p>
                 </div>
             </div>
 
             <div class="agenda-item">
                 <div class="details">
-                    <strong>Invocation</strong>
+                    <strong>Presiding</strong>
+                    <p></p>
+                </div>
+            </div>
+
+            <div class="agenda-item">
+                <div class="details">
+                    <strong>Announcements</strong>
+                    <p>Tithing Declaration: Talk to Daniel or see QR code below<br> <br> <br></p>
+                </div>
+            </div>
+
+            <div class="agenda-item">
+                <div class="details">
+                    <strong>Opening Hymn</strong>
+                    <p></p>
+                </div>
+            </div>
+
+            <div class="agenda-item">
+                <div class="details">
+                    <strong>Opening Prayer</strong>
                     <p></p>
                 </div>
             </div>
@@ -47,14 +68,21 @@
             <div class="agenda-item">
                 <div class="details">
                     <strong>Ward Business</strong>
-                    <p>Announcements and upcoming events</p>
+                    <p></p>
+                </div>
+            </div>
+
+            <div class="agenda-item">
+                <div class="details">
+                    <strong>Stake Business</strong>
+                    <p></p>
                 </div>
             </div>
 
             <div class="agenda-item">
                 <div class="details">
                     <strong>Sacrament Hymn</strong>
-                    <p>Hymn #169 - "As Now We Take the Sacrament"</p>
+                    <p></p>
                 </div>
             </div>
 
@@ -68,7 +96,7 @@
             <div class="agenda-item">
                 <div class="details">
                     <strong>Speaker</strong>
-                    <p>Sister Johnson - "Faith in Jesus Christ"</p>
+                    <p>Eleanor Miller</p>
                 </div>
             </div>
 
@@ -82,21 +110,21 @@
             <div class="agenda-item">
                 <div class="details">
                     <strong>Speaker</strong>
-                    <p>Brother Williams - "Gratitude and Service"</p>
+                    <p>Matthew Jackson</p>
                 </div>
             </div>
 
             <div class="agenda-item">
                 <div class="details">
                     <strong>Closing Hymn</strong>
-                    <p>Hymn #220 - "Lord, We Ask Thee Ere We Part"</p>
+                    <p></p>
                 </div>
             </div>
 
             <div class="agenda-item">
                 <div class="details">
-                    <strong>Benediction</strong>
-                    <p>Sister Davis</p>
+                    <strong>Closing Prayer</strong>
+                    <p></p>
                 </div>
             </div>
             </section>
@@ -104,15 +132,25 @@
             <section class="announcements">
                 <h3>Announcements</h3>
                 <ul>
-                <li>Youth Conference - November 15-17</li>
-                <li>Service Project - This Saturday at 9:00 AM</li>
-                <li>Institute classes continue Wednesday evenings at 7:00 PM</li>
+                <li>Institute classes continue Wednesday evenings at 7:30 PM</li>
                 </ul>
             </section>
 
             <section class="resources">
                 <h3>Resources & Links</h3>
                 <div class="resource-links">
+                <a href="https://local.churchofjesuschrist.org/en/units/us/wi/madison-ysa-ward" target="_blank" class="resource-link">
+                    <span class="link-icon">⛪</span>
+                    <span class="link-text">Ward Website</span>
+                </a>
+                <a href="https://discord.gg/KychmWchBc" target="_blank" class="resource-link">
+                    <span class="link-icon">💻</span>
+                    <span class="link-text">Ward Discord</span>
+                </a>
+                <a href="https://www.facebook.com/groups/8627328790/" target="_blank" class="resource-link">
+                    <span class="link-icon">🗣️</span>
+                    <span class="link-text">Ward Facebook</span>
+                </a>
                 <a href="https://www.churchofjesuschrist.org" target="_blank" class="resource-link">
                     <span class="link-icon">📖</span>
                     <span class="link-text">Church Website</span>
@@ -133,9 +171,9 @@
                     <span class="link-icon">📅</span>
                     <span class="link-text">Church Calendar</span>
                 </a>
-                <a href="https://www.churchofjesuschrist.org/get-help" target="_blank" class="resource-link">
+                <a href="https://calendly.com/ysamadison/15min?back=1&month=2024-04" target="_blank" class="resource-link">
                     <span class="link-icon">💬</span>
-                    <span class="link-text">Get Help & Support</span>
+                    <span class="link-text">Meeting with Bishop Clinton</span>
                 </a>
                 </div>
             </section>
