Made it so that the image works

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <main>
         <section class="inspiration">
             <div class="inspiration-image">
-                <img src="C:\Users\ammartin36.ENGR\OneDrive - UW-Madison\Documents\Currently_Working_On\calling\Madison-YSA-Agenda\calling_the_fishermen.jpeg" alt="Inspirational image">
+                <img src="images/calling_the_fishermen.jpeg" alt="Inspirational image">
             </div>
             <div class="inspiration-quote">
                 <blockquote>
