--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             <div class="agenda-item">
                 <div class="details">
                     <strong>Conducting</strong>
-                    <p>Bishop Clinton</p>
+                    <p>Grant</p>
                 </div>
             </div>
 
@@ -47,21 +47,21 @@
             <div class="agenda-item">
                 <div class="details">
                     <strong>Announcements</strong>
-                    <p>Tithing Declaration: Talk to Daniel or see QR code below<br> <br> <br></p>
+                    <p>Tithing Declaration: Talk to Daniel or see QR code below<br> <br>Regional YSA Dance, Dec 27, 6-9pm, Neenah <br>First Presidency Devotional tonight <br>Ward Christmas party - Saturday - invite friends and bring a white elephant gift <br>Sunday meetings will begin at 9 AM in 2026</p>
                 </div>
             </div>
 
             <div class="agenda-item">
                 <div class="details">
                     <strong>Opening Hymn</strong>
-                    <p></p>
+                    <p>203 Angels We Have Heard on High</p>
                 </div>
             </div>
 
             <div class="agenda-item">
                 <div class="details">
                     <strong>Opening Prayer</strong>
-                    <p></p>
+                    <p>Jacob Bills</p>
                 </div>
             </div>
 
@@ -82,7 +82,7 @@
             <div class="agenda-item">
                 <div class="details">
                     <strong>Sacrament Hymn</strong>
-                    <p></p>
+                    <p>188 Thy Will, O Lord, Be Done</p>
                 </div>
             </div>
 
@@ -95,36 +95,22 @@
 
             <div class="agenda-item">
                 <div class="details">
-                    <strong>Speaker</strong>
-                    <p>Eleanor Miller</p>
-                </div>
-            </div>
-
-            <div class="agenda-item">
-                <div class="details">
-                    <strong>Musical Number</strong>
-                    <p>Sister Anderson - "I Know That My Redeemer Lives"</p>
-                </div>
-            </div>
-
-            <div class="agenda-item">
-                <div class="details">
-                    <strong>Speaker</strong>
-                    <p>Matthew Jackson</p>
+                    <strong>Fast and Testimony Meeting</strong>
+                    <p></p>
                 </div>
             </div>
 
             <div class="agenda-item">
                 <div class="details">
                     <strong>Closing Hymn</strong>
-                    <p></p>
+                    <p>201 Joy to the World</p>
                 </div>
             </div>
 
             <div class="agenda-item">
                 <div class="details">
                     <strong>Closing Prayer</strong>
-                    <p></p>
+                    <p>Parker Smith</p>
                 </div>
             </div>
             </section>
@@ -171,6 +157,14 @@
                     <span class="link-icon">📅</span>
                     <span class="link-text">Church Calendar</span>
                 </a>
+                <a href="https://docs.google.com/forms/d/e/1FAIpQLSeoICCUoUSlmm_jvNJ6oiN9djGkn0XKiVsZZJM55yRK2Rrong/viewform?usp=sharing&ouid=109596045431617318151" target="_blank" class="resource-link">
+                    <span class="link-icon">📚</span>
+                    <span class="link-text">Participate in Ward Music</span>
+                </a>
+                <a href="https://docs.google.com/forms/d/e/1FAIpQLSevEiFzwyJOWaN2MZiyMsc9mQVddy-1vz8zTaLPRg_BQIkmZw/viewform?usp=header" target="_blank" class="resource-link">
+                    <span class="link-icon">📚</span>
+                    <span class="link-text">Sign up for a Musical Number</span>
+                </a>
                 <a href="https://calendly.com/ysamadison/15min?back=1&month=2024-04" target="_blank" class="resource-link">
                     <span class="link-icon">💬</span>
                     <span class="link-text">Meeting with Bishop Clinton</span>
@@ -181,7 +175,7 @@
 
         <footer>
             <p>Madison Young Single Adult Ward</p>
-            <p class="update-info">Last updated: November 02, 2025</p>
+            <p class="update-info">Last updated: December 07, 2025</p>
         </footer>
     </div>
 </body>
