--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <header>
             <h1>Madison YSA</h1>
             <h2>Sacrament Meeting Agenda</h2>
-            <p class="date">Week of October 26, 2025</p>
+            <p class="date">Week of December 7th, 2025</p>
         </header>
 
         <main>
