--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <header>
             <h1>Madison YSA</h1>
             <h2>Sacrament Meeting Agenda</h2>
-            <p class="date">Week of December 7th, 2025</p>
+            <p class="date">Week of December 14, 2025</p>
         </header>
 
         <main>
@@ -47,21 +47,21 @@
             <div class="agenda-item">
                 <div class="details">
                     <strong>Announcements</strong>
-                    <p>Tithing Declaration: Talk to Daniel or see QR code below<br> <br>Regional YSA Dance, Dec 27, 6-9pm, Neenah <br>First Presidency Devotional tonight <br>Ward Christmas party - Saturday - invite friends and bring a white elephant gift <br>Sunday meetings will begin at 9 AM in 2026</p>
+                    <p>Tithing Declaration: Talk to Daniel or see QR code below<br> <br> <br> <br> <br></p>
                 </div>
             </div>
 
             <div class="agenda-item">
                 <div class="details">
                     <strong>Opening Hymn</strong>
-                    <p>203 Angels We Have Heard on High</p>
+                    <p>209 Hark! The Herald Angels Sing</p>
                 </div>
             </div>
 
             <div class="agenda-item">
                 <div class="details">
                     <strong>Opening Prayer</strong>
-                    <p>Jacob Bills</p>
+                    <p>Amy Rich</p>
                 </div>
             </div>
 
@@ -82,7 +82,7 @@
             <div class="agenda-item">
                 <div class="details">
                     <strong>Sacrament Hymn</strong>
-                    <p>188 Thy Will, O Lord, Be Done</p>
+                    <p>178 O Lord of Hosts</p>
                 </div>
             </div>
 
@@ -95,8 +95,22 @@
 
             <div class="agenda-item">
                 <div class="details">
-                    <strong>Fast and Testimony Meeting</strong>
-                    <p></p>
+                    <strong>Speaker</strong>
+                    <p>Katie Gaertner, 1st councilor in the Stake YW Presidency</p>
+                </div>
+            </div>
+
+            <div class="agenda-item">
+                <div class="details">
+                    <strong>Intermediate Hymn</strong>
+                    <p>212 Far, Far Away on Judea’s Plains</p>
+                </div>
+            </div>
+
+            <div class="agenda-item">
+                <div class="details">
+                    <strong>Speaker</strong>
+                    <p>Connie Mathison, Stake RS President</p>
                 </div>
             </div>
 
@@ -110,7 +124,7 @@
             <div class="agenda-item">
                 <div class="details">
                     <strong>Closing Prayer</strong>
-                    <p>Parker Smith</p>
+                    <p>Emily Lym</p>
                 </div>
             </div>
             </section>
@@ -175,7 +189,7 @@
 
         <footer>
             <p>Madison Young Single Adult Ward</p>
-            <p class="update-info">Last updated: December 07, 2025</p>
+            <p class="update-info">Last updated: December 14, 2025</p>
         </footer>
     </div>
 </body>
